[package]
name = "mbroker"
description = "Тестовое задание: in-memory брокер сообщений"
version = "1.0.0"
edition = "2021"
authors = ["nyakunchev <nyakunchev@protonmail.com>"]

[dependencies]
serde_json = "1"
futures = "0.3"
tokio-stream = "0.1"
dashmap = "6"
log = "0.4"
env_logger = "0.11"

[dependencies.tokio]
version = "1.*"
features = ["full"]

[dependencies.serde]
version = "1.*"
features = ["derive"]

[dependencies.actix-web]
version = "4.*"
features = ["cookies"]

[dependencies.uuid]
version = "1.*"
features = ["v4", "v5", "serde"]